--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "brba",
+  "homepage": "https://laurad3.github.io/breaking-bad-react/",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -15,6 +16,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
+    "predeploy": "npm run build",
     "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
