--- a/package.json
+++ b/package.json
@@ -39,6 +39,8 @@
     "@fortawesome/free-solid-svg-icons": "^5.14.0",
     "@fortawesome/react-fontawesome": "^0.1.11",
     "axios": "^0.19.2",
-    "styled-components": "^5.1.1"
+    "gh-pages": "^3.1.0",
+    "styled-components": "^5.1.1",
+    "styled-components-breakpoint": "^3.0.0-preview.20"
   }
 }
